style: meta tag fix dark mode

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -56,7 +56,6 @@
 	-webkit-mask: var(--mask);
 	mask: var(--mask);
 	height: 60px;
-	background: #000;
 }
 
 .wave2 {
